don't consider failure of strip to be a build failure

--- a/Makefile.in
+++ b/Makefile.in
@@ -17,7 +17,7 @@ all: pam_ihosts.so
 
 pam_ihosts.so: common.h utility.o pam_module.c 
 	$(CC) $(FLAGS) -opam_ihosts.so -shared -lpam pam_module.c $(OBJ)
-	strip pam_ihosts.so
+	-strip pam_ihosts.so
 
 utility.o: utility.h utility.c
 	$(CC) $(FLAGS) -c utility.c
